--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
 <!-- Latest compiled JavaScript -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </head>
-<body>
+<body><center>
     <div class="card" style="width:250px">
         <img class="card-img-top" src="image/img1.gif" alt="Card image">
         <div class="card-body">
           <h4 class="card-title">Guide Medterm PHP 66</h4>
           <p class="card-text">Select Menu</p>
-          <a href="page1.php"class="btn btn-warning">1.+</a>
-          <a href="page2.php"class="btn btn-warning">2.-</a>
-          <a href="page3.php"class="btn btn-warning">3.*</a>
-          <a href="page4.php"class="btn btn-warning">4./</a>
+          <a href="page1.php"class="btn btn-primary">1.+</a>
+          <a href="page2.php"class="btn btn-primary">2.-</a>
+          <a href="page3.php"class="btn btn-primary">3.*</a>
+          <a href="page4.php"class="btn btn-primary">4./</a>
         </div>
       </div>
-</body>
+</body></center>
 </html>
